Resolving the auth issue when logging in and out